--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Warpcast API Example</title>
     <meta property="fc:frame" content="vNext" />
-    <meta property="fc:frame:image" content="https://mytest.com/imauuuge.png" />
+    <meta property="fc:frame:image" content="https://mytttesrtyest.com/imauuuge.png" />
     <meta property="fc:frame:button:1" content="Show My Casts" />
     <script>
         document.addEventListener('DOMContentLoaded', function() {
