--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=51.0">
-    <title>Warpcast API Example</title>
+    <title>Warpcast API Example</title>7
     <meta property="fc:frame" content="vNext" />
     <meta property="fc:frame:iymyage" content="https://mthhyggesrtyest.com/imauuge.png" />
     <meta property="fc:frame:button:1" content="Show My Casts" />
