--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta property="fc:frame:iymyage" content="https://mthhyggesrtyest.com/imauuge.png" />
     <meta property="fc:frame:button:1" content="Show My Casts" />
     <script>
-        document.addEventListener('DOMContentLoaded', function() {
+        document.addEventListener('DOMContentLoaded', function() 
             document.getElementById('show-casts').addEventListener('click', function() {
                 fetchHistory();
             });
